Feature item spec (#20)
* Added a basic specification for guns and more robust error logging when loading item files

* Renamed firearm-type variables to gun-type

* First setup gun specification loading

* Removed unused dependency binding

* Added validators system for validating configuration values

* Added a OneOfValider and a FieldSpecResolver for cleaner value resolving in configuration classes

* Renamed item configuration var names from sound to sounds

* Added an EnumValidator

* Added a ConditionalRequiredValidator

* Implemented ConditionalRequiredValidator in GunConfiguration

* Implemented a spec for reload systems

* Renamed ReloadSpecification to ReloadSpec

* Renamed ItemStackSpecification to ItemStackSpec

* Renamed FireModeSpecification to FireModeSpec

* Renamed RecoilSpecification to RecoilSpec

* Renamed SpreadPatternSpecification to SpreadPatternSpec

* Renamed ControlsSpecification to ControlsSpec

* Renamed GunSpecification to GunSpec

* Implemented a spec for scope configurations

* First setup for the equipment spec

* Implemented an item stack spec for activator items

* Implemented an item stack spec for thrown items

* Setup for equipment item loading with specs

* Moved the configuration for equipment base items into a display section for clearer seperation with other items

* Renamed delay in throwing and placing to cooldown

* Moved placing and throwing properties inside the deploy section

* Renamed ConditionalRequiredValidator to RequiredIfFieldEqualsValidator

* Implemented RequiredIfFieldExistsValidator

* Applied RequiredIfFieldExistsValidator to equipment configuration

* Added particle effect loading through spec

* Added javadocs to spec file